# DConfusion

./: .gitignore  APP_WARNINGS_DEMO.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  ELEVATOR_PITCH.md  IMPLEMENTATION_PLAN.md  LICENSE  PRESENTATION_CHEATSHEET.md  PRESENTATION_SCRIPT.md  QUICKSTART.md  README.md  SETUP.md  SLIDE_OUTLINE.md  STREAMLIT_APP_UPDATES.md  TROUBLESHOOTING.md  WARNINGS_GUIDE.md  WARNING_SYSTEM_SUMMARY.md  demo_notebook.ipynb  demo_script.py  pyproject.toml  requirements-app.txt  run_app.py  run_app.sh  setup.py  test_imports.py  test_warnings.py  verify_setup.py
app/: README.md  config.py  streamlit_app.py
app/components/: __init__.py  cost_analysis.py  detailed_view.py  metric_completion.py  metrics_display.py  sidebar.py  statistical_testing.py  visualizations.py  warnings.py
app/utils/: __init__.py  helpers.py  session.py
dconfusion/: DConfusion.py  __init__.py  core.py  io.py  metrics.py  statistics.py  validation.py  visualization.py  warnings.py
examples/: warnings_demo.py
