[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dconfusion"
version = "0.2.2"
description = "A package for working with confusion matrices."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Surya Gundavarapu", email = "surya_gundavarapu@yahoo.com" },
    { name = "Matthew Lanham", email = "mlanham1@butler.edu" },
    { name = "Aadya Pawar", email = "pawar17@purdue.edu" },
]
maintainers = [
    { name = "Matthew Lanham", email = "mlanham1@butler.edu" },
    { name = "Aadya Pawar", email = "pawar17@purdue.edu" },
]
keywords = ["confusion", "matrix"]
dependencies = [
  "numpy", "typing", "matplotlib", "scipy", 'csv'
]

classifiers = [
    # How mature is this project?
    "Development Status :: 1 - Planning",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",

    "Typing :: Typed"
]

[project.urls]
 Homepage = "https://github.com/sgundava/dconfusion"
# Documentation = "https://my-awesome-package.readthedocs.io/"
 Repository = "https://github.com/sgundava/dconfusion"
# Issues = "https://github.com/yourusername/my-awesome-package/issues"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
